--- a/style.css
+++ b/style.css
@@ -1,15 +1,26 @@
 body {
     background: #f7f7f7;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .photo {
     border: 2px solid #505050;
     border-radius: 50%;
-    width: 80px;
+    width: 100px;
 }
 
 #title, .subtitle, .post_title {
     color: #505050;
+}
+
+#title {
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+a {
+    text-decoration: line-through;
+    color: 505050;
 }
 
 .post_title {
@@ -30,6 +41,7 @@ body {
 .post_content {
     margin: 0;
     margin-bottom: 15px;
+    text-transform: capitalize;
 }
 
 .post_image {
