--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,12 @@ body {
 }
 
 a {
-    text-decoration: line-through;
-    color: 505050;
+    color: #505050;
+    text-decoration: none;
+}
+
+body nav a {
+    font-size: 40px;
 }
 
 .post_title {
@@ -58,5 +62,5 @@ a {
 }
 
 .contacts_list li a {
-    text-decoration: none;
+    font-size: 16px;
 }
